--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,9 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
+       
+  - title: "Projects"
     url: /year-archive/
     
   - title: "CV"
-    url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
+    url: /https://drive.google.com/file/d/1-etF0jVWxNLSRpC6ggd4XD-nagYuLEdK/view?usp=sharing/
+
