--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Revanth Parsa"
-  avatar           : "profile.png"
+  avatar           : "IMG_E1230.JPG"
   bio              : "I am M.Tech 2nd yearite purshuing master's in Artificial Intelligence"
   location         : "Telangana, India"
   employer         :
