--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
 main:
        
   - title: "Projects"
-    url: /year-archive/
+    url: 
     
   - title: "CV"
     url: /https://drive.google.com/file/d/1-etF0jVWxNLSRpC6ggd4XD-nagYuLEdK/view?usp=sharing/
