--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,5 +5,5 @@ main:
     url: 
     
   - title: "CV"
-    url: /https://drive.google.com/file/d/1-etF0jVWxNLSRpC6ggd4XD-nagYuLEdK/view?usp=sharing/
+    url: 
 
