--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Revanth Parsa"
   avatar           : "IMG_E1230.JPG"
-  bio              : "I am M.Tech 2nd yearite purshuing master's in Artificial Intelligence"
+  bio              : "M.Tech 2nd yearite doing master's in Artificial Intelligence"
   location         : "Telangana, India"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
