--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Revanth Parsa"
   avatar           : "IMG_E1230.JPG"
-  bio              : "M.Tech 2nd yearite doing master's in Artificial Intelligence"
-  location         : "Telangana, India"
+  bio              : "Business Analyst at Dhurin"
+  location         : "Banglore, India"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
