--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Revanth Parsa"
-  avatar           : "IMG_E1230.JPG"
+  avatar           : "IMG_E1230_1.JPG"
   bio              : "Business Analyst at Dhurin"
   location         : "Banglore, India"
   employer         :
