--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,6 @@
 # main links links
 main:
-       
-  - title: "Projects"
-    url: 
-    
-  - title: "CV"
+           
+  - title: "Resume"
     url: /cv/
 
